--- a/src/index.css
+++ b/src/index.css
@@ -134,6 +134,11 @@
   background: var(--black-gradient);
 }
 
+
+.roadmap li{
+  padding-bottom: 12px;
+}
+
 .blue__gradient {
   background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
   filter: blur(123px);
