--- a/src/index.css
+++ b/src/index.css
@@ -138,12 +138,12 @@
 }
 
 .blue__gradient {
-	background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
+	background: linear-gradient(180deg, #EE0091 0%, #4d1f1f 100%);
 	filter: blur(123px);
 }
 
 .pink__gradient {
-	background: linear-gradient(90deg, #f4c4f3 0%, #67cdfcda 100%);
+	background: linear-gradient(90deg, #EE0091 0%, #850051 100%);
 	filter: blur(900px);
 }
 
