--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,11 @@
 .text-gradient {
 	background: radial-gradient(
 		64.18% 64.18% at 71.16% 35.69%,
-		#def9fa 0.89%,
-		#bef3f5 17.23%,
-		#9dedf0 42.04%,
-		#7de7eb 55.12%,
-		#5ce1e6 71.54%,
-		#33bbcf 100%
+		#EE0091 0.89%,
+		#f1400b 17.23%,
+		#850051 42.04%,
+		#ee0034 71.54%,
+		#EE0091 100%
 	);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
