--- a/src/index.css
+++ b/src/index.css
@@ -120,8 +120,8 @@
 }
 
 .feature-card:hover {
-	background: var(--black-gradient);
-	box-shadow: var(--card-shadow);
+	background: linear-gradient(180deg, #EE0091 0%, #4d1f1f 100%)
+	
 }
 
 .btn:hover {
