--- a/src/index.css
+++ b/src/index.css
@@ -144,7 +144,7 @@
 }
 
 .blue__gradient {
-	background: linear-gradient(180deg, #EE0091 0%, #4d1f1f 100%);
+	background: linear-gradient(180deg, #ee005316 0%, #4d1f1f33 100%);
 	filter: blur(px);
 }
 
